Update to modular application structure.

--- a/lore/templates/auth/login.html
+++ b/lore/templates/auth/login.html
@@ -1,5 +1,5 @@
 
-{% extends "layout.html" %}
+{% extends "main/layout.html" %}
 {% block content %}
 <!-- Login page -->
 <div class="uk-container">
