--- a/lore/templates/main/about.html
+++ b/lore/templates/main/about.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "main/layout.html" %}
 {% block content %}
     <h2>This is the about page.</h2>
 {% endblock content %}
