--- a/lore/templates/auth/login.html
+++ b/lore/templates/auth/login.html
@@ -1,69 +1,112 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title></title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.11/css/uikit.min.css"/>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
+    </head>
+    <body>
+        <div class="uk-flex uk-flex-center uk-flex-middle uk-background-muted uk-height-viewport">
+			<div class="uk-position-bottom-center uk-position-small uk-visible@m">
+				<span class="uk-text-small uk-text-muted">Created by <a>@mushydev</a>.</span>
+			</div>
+			<div class="uk-width-medium uk-padding-small">
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                        {% for category, message in messages %}
+                            <script>
+                                UIkit.notification({message: "{{ message }}", status: "{{ category }}", timeout: 3000})
+                            </script>
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
+				<form method="POST" action="">
+                    {{ form.hidden_tag() }}
+					<fieldset class="uk-fieldset">
+						<legend class="uk-legend">Login</legend>
+						<div class="uk-margin">
+							<div class="uk-inline uk-width-1-1">
+                                {{ form.username(
+                                        **{
+                                            'class': 'uk-input uk-form-large',
+                                            'type': 'text',
+                                            'data-validation': 'length',
+                                            'data-validation-length': '3-16',
+                                            'placeholder': 'Username'
+                                        }
+                                    )
+                                }}
+							</div>
+						</div>
+						<div class="uk-margin">
+							<div class="uk-inline uk-width-1-1">
+								{{ form.password(
+                                        **{
+                                            'class': 'uk-input uk-form-large',
+                                            'type': 'password',
+                                            'data-validation': 'required',
+                                            'placeholder': 'Password'
+                                        }
+                                    )
+                                }}
+							</div>
+						</div>
+						
+						<div class="uk-margin">
+                            {{ form.remember(
+                                    **{
+                                        'class': 'uk-checkbox',
+                                        'type': 'checkbox',
+                                        'title': 'Remember Me'
+                                    }
+                                )
+                            }}
+						</div>
+						<div class="uk-margin">
+                            {{ form.submit(
+                                **{
+                                    'class': 'uk-button uk-button-primary uk-button-primary uk-button-large uk-width-1-1'
+                                }
+                            ) }}
+						</div>
+					</fieldset>
+				</form>
+				<div>
+					<div class="uk-text-center">
+						<a class="uk-link-reset uk-text-small" data-uk-toggle="target: #recover;animation: uk-animation-slide-top-small">Forgot your password?</a>
+					</div>
+					<div class="uk-margin-small-top" id="recover" hidden>
+						<form action="login.html">
+							
+							<div class="uk-margin-small">
+								<div class="uk-inline uk-width-1-1">
+									<span class="uk-form-icon uk-form-icon-flip" data-uk-icon="icon: mail"></span>
+									<input class="uk-input" placeholder="E-mail" required type="text">
+								</div>
+							</div>
+							<div class="uk-margin-small">
+								<button type="submit" class="uk-button uk-button-primary uk-button-primary uk-width-1-1">SEND PASSWORD</button>
+							</div>
+							
+                        </form>
+                        <script>
+                                $.validate({
+                                  lang: 'en',
+                                  errorElementClass: 'uk-form-danger',
+                                  errorMessageClass: 'uk-text-danger'
+                                });
+                        </script>
+					</div>
+				</div>
+			</div>
+		</div>
 
-{% extends "main/layout.html" %}
-{% block content %}
-<!-- Login page -->
-<div class="uk-container">
-    <div class="uk-flex uk-flex-center uk-flex-middle" uk-height-viewport="offset-top: true; offset-bottom: 10%;">
-        <div class="uk-card uk-card-default uk-border-rounded uk-background-muted uk-padding-small" uk-scrollspy="cls:uk-animation-slide-bottom-small">
-            <!-- Form -->
-            <form method="POST" action="" class="uk-form-stacked">
-                {{ form.hidden_tag() }}
-                <fieldset class="uk-fieldset">
-                        <div class="uk-card-header">
-                            <legend class="uk-card-title uk-margin-remove-bottom">Login</legend>
-                            <p class="uk-text-meta uk-margin-remove-top">Welcome to Lore!</p>
-                        </div>
-                    <div class="uk-card-body">
-                        <!-- Email -->
-                        <div class="uk-margin"> 
-                            {% if form.username.errors %}
-                                <div class="uk-inline">
-                                    <span class="uk-form-icon uk-form-icon" data-uk-icon="icon: user"></span>
-                                    {% for error in form.username.errors %}
-                                        {{ form.username( **{'class': 'uk-input uk-form-large uk-form-danger', 'placeholder': form.username.label.text, 'uk-tooltip': 'title: ' + error + '; pos: right;'} )}}
-                                    {% endfor %}
-                                </div>
-                            {% else %}
-                                <div class="uk-inline">
-                                    <span class="uk-form-icon uk-form-icon" data-uk-icon="icon: user"></span>
-                                    {{ form.username( **{'class': 'uk-input uk-form-large', 'placeholder': form.username.label.text} ) }}
-                                </div>
-                            {% endif %}
-                        </div>
-                        <!-- Password -->
-                        <div class="uk-margin">
-                            {% if form.password.errors %}
-                                <div class="uk-inline">
-                                    <span class="uk-form-icon uk-form-icon" data-uk-icon="icon: lock"></span>
-                                    {% for error in form.password.errors %}
-                                        {{ form.password( **{'class': 'uk-input uk-form-large uk-form-danger', 'placeholder': form.password.label.text, 'uk-tooltip': 'title: ' + error + '; pos: right;'} )}}
-                                    {% endfor %}
-                                </div>
-                            {% else %}
-                                <div class="uk-inline">
-                                    <span class="uk-form-icon uk-form-icon" data-uk-icon="icon: lock"></span>
-                                    {{ form.password( **{'class': 'uk-input uk-form-large', 'placeholder': form.password.label.text} ) }}
-                                </div>
-                            {% endif %}
-                        </div>
-                        <!-- Remember Me -->
-                        <div class="uk-margin">
-                            {{ form.remember( **{'class': 'uk-checkbox uk-margin-small-right', 'type': 'checkbox'} ) }}
-                            {{ form.remember.label() }}
-                        </div>
-                        <div class="uk-margin">
-                            {{ form.submit(class='uk-button uk-button-medium uk-button-primary uk-text-uppercase uk-width-1-1') }}
-                        </div>
-                    </div>
-                    <div class="uk-card-footer">
-                        <!-- Forget -->
-                        <div class="uk-margin uk-text-center">
-                                <span class="uk-text-muted"><small><a href="#">Forgot your password?</a></small></span>
-                        </div>
-                    </div>
-                </fieldset>
-            </form>
-        </div>
-    </div>
-</div>   
-{% endblock content %}
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.11/js/uikit.min.js" 
+                integrity="sha256-uIoU015jY2XsmbFtIjpet+eU+0GM/Y+zaGlNngZTKuw=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.11/js/uikit-icons.min.js" 
+                integrity="sha256-92V223qt9YYY7xHag8ctb7dvCKnK5sv/psCFHnAtZoU=" crossorigin="anonymous"></script>
+    </body>
+</html>
