--- a/lore/templates/main/user.html
+++ b/lore/templates/main/user.html
@@ -7,16 +7,55 @@
     }
 </style>
 
+
+{% macro build_fields(fields) %}
+{% for field in fields %}
+    {% for key, val in field.items() %}
+        <div class="uk-margin-small">
+            <div id="{{ key }}" class="uk-visible-toggle">
+                <div uk-grid>
+                    <div class="uk-width-expand">
+                        {% if key == "username" %}
+                            <h4>{{ val }}</h3>
+                        {% else %}
+                            <p>{{ val }}</p>
+                        {% endif %}
+                    </div>
+                    <div class="uk-width-auto">
+                        <ul class="uk-hidden-hover uk-iconnav">
+                            <li><a id="{{ key }}-icon" uk-icon="icon: pencil"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script>
+            $('#{{key}}-icon').click(function(){
+                $('#{{ key }}').html('<input type="text" class="uk-input" placeholder="{{key}}"></input>');
+            })
+        </script>
+    {% endfor %}
+{% endfor %}
+{% endmacro %}
+
 {% block content %}
     <div class="uk-container">
         <div class="uk-section uk-section-small">
-            <div class="uk-container uk-height-small">
-                <div class="uk-grid uk-grid-medium" data-uk-grid>
-                    <div class="uk-width-medium uk-flex uk-flex-center">
-                        <img src="{{ user.get_image_path() }}">                    
+            <div class="uk-container">
+                <div class="uk-grid uk-grid-medium uk-match-height" data-uk-grid>
+                    <div class="uk-width-auto">
+                        <img src="{{ user.get_image_path() }}">
                     </div>
                     <div class="uk-margin">
-                        <h3>{{ user.username }} ({{user.first_name}}, {{user.last_name}})</h3>
+                        {% if user == current_user %}
+                            {{ build_fields(display_fields) }}
+                        {% else %}
+                        <div>
+                            <h3 class="username-field">{{ user.username }}</h3>
+                            <p class="fullname-field">{{ user.first_name }}, {{ user.last_name }}</p>
+                            <a id="#edit-userfield" class="uk-icon-link" uk-icon="pencil"></a>
+                        </div>
+                        {% endif %}
                         {% if user.last_seen %}<p class=uk-margin-remove>Last seen: {{ user.last_seen }}</p>{% endif %}
                         <p class="uk-margin-remove">{{ user.followers.count() }} followers, {{ user.followed.count() }} following.</p>
                         {% if user == current_user %}
