--- a/lore/templates/auth/login.html
+++ b/lore/templates/auth/login.html
@@ -7,6 +7,10 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.11/css/uikit.min.css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.11/js/uikit.min.js" 
+        integrity="sha256-uIoU015jY2XsmbFtIjpet+eU+0GM/Y+zaGlNngZTKuw=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.11/js/uikit-icons.min.js" 
+        integrity="sha256-92V223qt9YYY7xHag8ctb7dvCKnK5sv/psCFHnAtZoU=" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="uk-flex uk-flex-center uk-flex-middle uk-background-muted uk-height-viewport">
@@ -59,11 +63,11 @@
                             {{ form.remember(
                                     **{
                                         'class': 'uk-checkbox',
-                                        'type': 'checkbox',
-                                        'title': 'Remember Me'
+                                        'type': 'checkbox'
                                     }
                                 )
                             }}
+                            Remember Me
 						</div>
 						<div class="uk-margin">
                             {{ form.submit(
@@ -76,7 +80,7 @@
 				</form>
 				<div>
 					<div class="uk-text-center">
-						<a class="uk-link-reset uk-text-small" data-uk-toggle="target: #recover;animation: uk-animation-slide-top-small">Forgot your password?</a>
+						<a class="uk-link-reset uk-text-small" uk-toggle="target: #recover;animation: uk-animation-slide-top-small">Forgot your password?</a>
 					</div>
 					<div class="uk-margin-small-top" id="recover" hidden>
 						<form action="login.html">
@@ -103,10 +107,5 @@
 				</div>
 			</div>
 		</div>
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.11/js/uikit.min.js" 
-                integrity="sha256-uIoU015jY2XsmbFtIjpet+eU+0GM/Y+zaGlNngZTKuw=" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.11/js/uikit-icons.min.js" 
-                integrity="sha256-92V223qt9YYY7xHag8ctb7dvCKnK5sv/psCFHnAtZoU=" crossorigin="anonymous"></script>
     </body>
 </html>
