--- a/lore/templates/main/layout.html
+++ b/lore/templates/main/layout.html
@@ -11,6 +11,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.10/js/uikit.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.10/js/uikit-icons.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
+        {{ moment.include_moment() }}
     </head>
     <style>
         #top-head {
@@ -42,6 +43,11 @@
                                     <li class="uk-active"><a href={{ url_for('main.explore') }}>Explore</a></li>
                                     {% else %}
                                     <li><a href={{ url_for('main.explore') }}>Explore</a></li>
+                                    {% endif %}
+                                    {% if title == "Inbox" %}
+                                    <li class="uk-active"><a href={{ url_for('main.inbox') }}>Inbox</a></li>
+                                    {% else %}
+                                    <li><a href={{ url_for('main.inbox') }}>Inbox</a></li>
                                     {% endif %}
                                 </ul>
                             </div>
