--- a/lore/templates/main/offcanvas.html
+++ b/lore/templates/main/offcanvas.html
@@ -4,12 +4,11 @@
         <h3 class="uk-nav-center">Welcome, {{ current_user.username }}.</h3>
         <ul class="uk-nav uk-nav-primary uk-nav-center">
             <hr>
-            <li class="uk-nav-header">Study Tools</li>
             <li><a uk-toggle="target: #checklist;animation: uk-animation-slide-top-small"><span class="uk-margin-small-right" uk-icon="icon: check"></span>Checklist</a></li>
             <div id="checklist" class="uk-margin" hidden>
-                <div class="uk-form-label">TASKS <a uk-icon="pencil" uk-toggle="target: #add-task"> Add a task</a></div>
+                <div class="uk-margin-small-bottom"><a uk-icon="plus" uk-toggle="target: #add-task"></a></div>
                 {% include "main/task.html" %}
-                <div class="uk-margin" id="task-list"></div>
+                <ul id="task-list" class="uk-light" uk-accordion></ul>
             </div>
             <li><a href="#"><span class="uk-margin-small-right" uk-icon="icon: clock"></span>Timed Study</a></li>
         </ul>
