--- a/lore/templates/main/landing.html
+++ b/lore/templates/main/landing.html
@@ -29,7 +29,7 @@
 		</style>
     </head>
     
-	<body class="uk-light wrap uk-background-norepeat uk-background-cover uk-background-center uk-background-secondary" style="background-image: url(static/img/adult-cafe-null.jpg)">
+	<body class="uk-light wrap uk-background-norepeat uk-background-cover uk-background-center uk-background-secondary" style="background-image: url( {{ url_for('static', filename='img/adult-cafe-null.jpg') }} )">
 		<div class="uk-offcanvas-content">
 			<div class="uk-flex uk-flex-center uk-flex-middle uk-height-viewport uk-position-z-index uk-position-relative tinted-image" data-uk-height-viewport="min-height: 400">
 				
