Small code cleanup.

--- a/lore/templates/main/_message_dialog.html
+++ b/lore/templates/main/_message_dialog.html
@@ -44,7 +44,7 @@
                     <fieldset class="uk-fieldset">
                         <div class="uk-margin">
                             <div class="uk-form-label">Say something nice:</div>
-                            <textarea id="form-message-body" class="uk-textarea" rows="5" placeholder="Start a conversation.."></textarea>
+                            <textarea id="form-message-body" class="uk-textarea" rows="5" placeholder="Message"></textarea>
                         </div>
                     </fieldset>
                 </div>
