--- a/lore/templates/main/inbox.html
+++ b/lore/templates/main/inbox.html
@@ -1,7 +1,7 @@
 {% extends "main/layout.html" %}
 {% block content %}
-<div class="uk-container">
-    <div class="uk-section uk-section-small">
+<div class="uk-container uk-background-default" uk-height-viewport="expand: true">
+    <div class="uk-section uk-section-small uk-padding uk-padding-medium">
         <h2 class="uk-margin-remove-bottom">Inbox.</h2>
         <span class="uk-text-muted uk-margin-remove-top">Speak in private. Psst!</span>
         <hr>
