--- a/lore/templates/main/user.html
+++ b/lore/templates/main/user.html
@@ -1,8 +1,8 @@
 {% extends "main/layout.html" %}
 
 {% block content %}
-<div class="uk-container">
-    <div class="uk-section uk-section-small">
+<div class="uk-container uk-background-default" uk-height-viewport="expand: true">
+    <div class="uk-section uk-section-small uk-padding uk-padding-medium">
         <div class="uk-container">
             <div class="uk-grid uk-grid-large" data-uk-grid>
                 <div class="uk-width-auto">
